# sadkomed_parser

./: Makefile  README.md  inst.sh  pyproject.toml
sadkomed_parser/: cli.py  command_handler.py  inventory_list.py  key_exist.py  migrate_now.py  migrate_now.sh  ssh_key_inst.py
sadkomed_parser/scripts/: sadkomed_parser.py
tests/: test_sadkomed_parser.py
