[tool.poetry]
name = "sadkomed_parser"
version = "0.1.0"
description = ""
authors = ["RomanKalsin <karen52rus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
sadkomed_parser = "sadkomed_parser.scripts.sadkomed_parser:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
